# My-Portfolio

./: .gitignore  README.md  myportfolio.html
HotDogFoodClassifier/: .gitignore  HotDogModel.py  README.md  common.py  eval.csv  eval.py  modal_app.py  pyproject.toml  requirements.txt  train_model.py  wandb.env.example
portfolio/: package-lock.json  package.json
portfolio/app/: globals.css  layout.tsx  page.tsx
portfolio/app/about/: page.tsx
portfolio/app/projects/: page.tsx
portfolio/components/: ContactSection.tsx  FocusAreas.tsx  Footer.tsx  Header.tsx  ProfilePhoto.tsx  ProjectCard.tsx  SkillsSection.tsx  icons.tsx
portfolio/lib/: site.ts
