[project]
name = "food"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "fastapi[standard]>=0.115.0",
    "modal>=1.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.4.0",
    "setfit>=1.1.3",
    "transformers>=4.41,<5",
    "torch>=2.6.0",
    "wandb>=0.19.0",
    "weave>=0.52.22",
]
